--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "path": "^0.12.7"
@@ -11,7 +12,6 @@
   "name": "bpimockapp",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
